...
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fHh-n2-cDh" customClass="ClassicalView" customModule="MarvelApp" customModuleProvider="target">
                                                    <rect key="frame" x="8" y="28" width="144" height="209"/>
                                                    <subviews>
                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" ambiguous="YES" image="MockImage" translatesAutoresizingMaskIntoConstraints="NO" id="h2A-97-zMF">
                                                            <rect key="frame" x="8" y="8" width="128" height="176"/>
                                                        </imageView>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="A-Bomb (HAS)" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO
                                                            <rect key="frame" x="8" y="192" width="128" height="20.5"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                    </subviews>
...
                            <constraint firstItem="ExG-KW-dVm" firstAttribute="trailing" secondItem="Rsb-9v-74s" secondAttribute="trailing" id="sI2-xp-PZg"/>
                            <constraint firstItem="4u7-ef-Fp6" firstAttribute="top" secondItem="Rsb-9v-74s" secondAttribute="top" id="wF1-QD-UGb"/>
                            <constraint firstItem="ExG-KW-dVm" firstAttribute="bottom" secondItem="Rsb-9v-74s" secondAttribute="bottom" id="x1v-7O-orB"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="Rsb-9v-74s"/>
                    </view>
                    <navigationItem key="navigationItem" title="Marvel App" id="vQS-Zm-47C">
                        <barButtonItem key="backBarButtonItem" title=" " id="8ag-7g-lVD"/>
                    </navigationItem>
                    <connections>
                        <outlet property="collectionView" destination="4u7-ef-Fp6" id="mlH-kH-8RS"/>
                        <outlet property="tableView" destination="ExG-KW-dVm" id="29g-gj-8GS"/>
                    </connections>
...
